@@ -1,3 +1,4 @@
+* Allow lost_found as output of production
 * Keep cost of unused input products
 * Use the shipment assign wizard for production
 * Rename production state from cancel to cancelled
